<resources>
    <string name="app_name">PlansTec</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="subscription">Subscription</string>
    <string name="request">consultation</string>
    <string name="articles">Articles</string>
    <string name="candshops">Courses / workshops</string>
    <string name="user_reviews">User reviews</string>
    <string name="stats">Statistics</string>
    <string name="view_all">View all</string>
    <string name="main">Main</string>
    <string name="favs">My favorites</string>
    <string name="about">About us</string>
    <string name="plan">Plan / subscribe</string>
    <string name="consults">Consulting</string>
    <string name="successsh">PlansTec success partners</string>
    <string name="terms">Terms and conditions</string>
    <string name="happy">Glad to serve you</string>
    <string name="follow">Follow us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="create_account">Create account</string>
    <string name="join">join now</string>
    <string name="save_changes">Save Changes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="no_interet_connection">No Internet Connection</string>
    <string name="general_issue">Internal Server Error, Try again later</string>
    <string name="email_text">Update password for email\n %s</string>
    <string name="banktransfer">Bank transfer</string>
    <string name="opno">Transaction number</string>
    <string name="attachimghere">attach image here</string>
    <string name="cinfrimpayment">confirm payment</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="ifuwantsnow">" If you want to consult one of our experts, register now"</string>
    <string name="writeheremsg">write your message</string>
    <string name="twitter">twitter</string>
    <string name="toutuve">youtube</string>
    <string name="website">website</string>
    <string name="entertoyteugeir">"Please enter your email and we will send you a link to reset a new password "</string>
    <string name="emailaddress">email</string>
    <string name="reset">Reset</string>
    <string name="name">name</string>
    <string name="phoneno">phone</string>
    <string name="message">message</string>
    <string name="send">send</string>
    <string name="password">password</string>
    <string name="loginmow">login</string>
    <string name="forgotpass">forgot password?</string>
    <string name="donthave">don\'t have an account?</string>
    <string name="createone">create account</string>
    <string name="ocnfirmanswers">confirm answers</string>
    <string name="city">city</string>
    <string name="district">district</string>
    <string name="onlineoay">online payment</string>
    <string name="alreaduhave">already have an account?</string>
    <string name="repass">re-enter password</string>
    <string name="updatepass">reset passsword</string>
    <string name="desc">description</string>
    <string name="terns">terms and conditions</string>
    <string name="enteranswer">enter your answer</string>
    <string name="attachanswer">attach your answer</string>
    <string name="cardno">card number</string>
    <string name="enterconfcode">enter confirmation code</string>
    <string name="abutjav">About PlansTec</string>
    <string name="reqcons">request consultation</string>
    <string name="followu">follow us</string>
    <string name="gladtoserve">glad to serve</string>
    <string name="mianfragment">main</string>
    <string name="myplans">my packages</string>
    <string name="notifications">notifications</string>
    <string name="reviewa">reviews</string>
    <string name="planss">plans/subscribtion</string>
    <string name="partners">plansTec partners</string>
    <string name="resetpass">reset password</string>
    <string name="payoptions">payment options</string>
    <string name="createaccount">create account</string>
    <string name="sentdone">sent</string>
    <string name="servicetype">service type</string>
    <string name="loginnnn">login</string>
    <string name="wrongcode">wrong code</string>
    <string name="no_conversation">no conversation</string>
    <string name="re_enter_the_answer">re enter the answer</string>
    <string name="strt">start now</string>
</resources>
