<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F9FBFF"
    tools:context=".home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"

            android:layout_height="100dp"
            android:background="@drawable/card_radius"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:elevation="8dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView">
            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/vid"
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_gravity="center"

                />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/request_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#E85ACA"
            android:fontFamily="@font/tajwal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/request"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="25dp"
            app:iconGravity="end"
            app:icon="@drawable/support"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/join_btn"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/join_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#FFBF70"
            android:fontFamily="@font/tajwal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/subscription"
            android:textColor="@color/white"

            android:textStyle="bold"
            app:cornerRadius="25dp"
            app:icon="@drawable/join"
            app:iconGravity="end"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/request_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/articles"
            android:fontFamily="@font/tajwalbold"
            android:textColor="#1F1F1F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/request_btn" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/candshops"
            android:textColor="#1F1F1F"
            android:fontFamily="@font/tajwalbold"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_articles" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/user_reviews"
            android:fontFamily="@font/tajwalbold"

            android:textColor="#1F1F1F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_courses" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/stats"
            android:fontFamily="@font/tajwalbold"

            android:textColor="#1F1F1F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_opinions" />

        <TextView

            android:id="@+id/all_articles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/txt_radius"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/view_all"
            android:textColor="#274E9F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/join_btn" />

        <TextView

            android:id="@+id/all_courses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/txt_radius"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/view_all"
            android:textColor="#274E9F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_articles" />

        <TextView
            android:id="@+id/all_opinions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/txt_radius"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/view_all"
            android:textColor="#274E9F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_courses" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_articles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_opinions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView50"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/mask" />

            <TextView
                android:id="@+id/sclents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"

                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/imageView50"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:backgroundTint="#96B9FF"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/mask" />

            <TextView
                android:id="@+id/splans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"

                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/imageView8"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorAccent"
            android:backgroundTint="#FFBF70"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView50"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/mask" />

            <TextView
                android:id="@+id/scourses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>